--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -223,7 +223,7 @@
                                            id="algo_min_algotrader_rank" type="text"
                                            class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
-                                        <span class="text-primary algo-rank-filter">133</span>
+                                        <span class="text-primary algo-rank-filter"></span>
                                         candidates match
                                     </label>
                                 </div>
@@ -248,7 +248,7 @@
                                                name="algo_min_underprice" id="algo_min_underprice" type="text"
                                                class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
-                                        <span class="text-primary underprice-filter">133</span>
+                                        <span class="text-primary underprice-filter"></span>
                                         candidates match
                                     </label>
                                 </div>
@@ -285,7 +285,7 @@
                                                name="algo_min_momentum" id="algo_min_momentum" type="text"
                                                class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
-                                        <span class="text-primary momentum-filter">133</span>
+                                        <span class="text-primary momentum-filter"></span>
                                         candidates match
                                     </label>
                                 </div>
@@ -310,7 +310,7 @@
                                                name="algo_min_beta" id="algo_min_beta" type="text"
                                                class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
-                                        <span class="text-primary beta-filter">133</span>
+                                        <span class="text-primary beta-filter"></span>
                                         candidates match
                                     </label>
                                 </div>
@@ -337,7 +337,7 @@
                                                name="algo_max_intraday_drop_percent" id="algo_max_intraday_drop_percent" type="text"
                                                class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
-                                        <span class="text-primary intraday-filter">133</span>
+                                        <span class="text-primary intraday-filter"></span>
                                         candidates match
                                     </label>
                                 </div>
@@ -346,7 +346,7 @@
                         <div class="form-row pt-4 d-flex justify-content-center">
                             <div>
                                 <label class="text-muted h5 filter-comment">
-                                        <span class="text-primary total-filter">70</span>
+                                        <span class="text-primary total-filter"></span>
                                         Candidates match in Total
                                 </label>
                             </div>
