--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -224,7 +224,7 @@
                                            class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
                                         <span class="text-primary algo-rank-filter"></span>
-                                        candidates match
+                                        <span class="fixed-filter-text pl-2"></span>
                                     </label>
                                 </div>
                             </div>
@@ -249,7 +249,7 @@
                                                class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
                                         <span class="text-primary underprice-filter"></span>
-                                        candidates match
+                                        <span class="fixed-filter-text pl-2"></span>
                                     </label>
                                 </div>
                             </div>
@@ -286,7 +286,7 @@
                                                class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
                                         <span class="text-primary momentum-filter"></span>
-                                        candidates match
+                                        <span class="fixed-filter-text pl-2"></span>
                                     </label>
                                 </div>
                             </div>
@@ -311,7 +311,7 @@
                                                class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
                                         <span class="text-primary beta-filter"></span>
-                                        candidates match
+                                        <span class="fixed-filter-text pl-2"></span>
                                     </label>
                                 </div>
                             </div>
@@ -338,7 +338,7 @@
                                                class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
                                         <span class="text-primary intraday-filter"></span>
-                                        candidates match
+                                        <span class="fixed-filter-text pl-2"></span>
                                     </label>
                                 </div>
                             </div>
@@ -347,7 +347,7 @@
                             <div>
                                 <label class="text-muted h5 filter-comment">
                                         <span class="text-primary total-filter"></span>
-                                        Candidates match in Total
+                                        <span class="fixed-total-filter-text"></span>
                                 </label>
                             </div>
                         </div>
