--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -223,7 +223,8 @@
                                            id="algo_min_algotrader_rank" type="text"
                                            class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
-                                        <span class="text-primary algo-rank-filter"></span>
+                                        <span class="loading"></span>
+                                        <span class="text-primary algo-rank-filter num-candidates"></span>
                                         <span class="fixed-filter-text pl-2"></span>
                                     </label>
                                 </div>
@@ -248,7 +249,8 @@
                                                name="algo_min_underprice" id="algo_min_underprice" type="text"
                                                class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
-                                        <span class="text-primary underprice-filter"></span>
+                                        <span class="loading"></span>
+                                        <span class="text-primary underprice-filter num-candidates"></span>
                                         <span class="fixed-filter-text pl-2"></span>
                                     </label>
                                 </div>
@@ -285,7 +287,8 @@
                                                name="algo_min_momentum" id="algo_min_momentum" type="text"
                                                class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
-                                        <span class="text-primary momentum-filter"></span>
+                                        <span class="loading"></span>
+                                        <span class="text-primary momentum-filter num-candidates"></span>
                                         <span class="fixed-filter-text pl-2"></span>
                                     </label>
                                 </div>
@@ -310,7 +313,8 @@
                                                name="algo_min_beta" id="algo_min_beta" type="text"
                                                class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
-                                        <span class="text-primary beta-filter"></span>
+                                        <span class="loading"></span>
+                                        <span class="text-primary beta-filter num-candidates"></span>
                                         <span class="fixed-filter-text pl-2"></span>
                                     </label>
                                 </div>
@@ -337,7 +341,8 @@
                                                name="algo_max_intraday_drop_percent" id="algo_max_intraday_drop_percent" type="text"
                                                class="form-control strategy-change col-md-6">
                                     <label class="text-muted small filter-comment col-md-3">
-                                        <span class="text-primary intraday-filter"></span>
+                                        <span class="loading"></span>
+                                        <span class="text-primary intraday-filter num-candidates"></span>
                                         <span class="fixed-filter-text pl-2"></span>
                                     </label>
                                 </div>
@@ -346,8 +351,9 @@
                         <div class="form-row pt-4 d-flex justify-content-center">
                             <div>
                                 <label class="text-muted h5 filter-comment">
-                                        <span class="text-primary total-filter"></span>
-                                        <span class="fixed-total-filter-text"></span>
+                                    <span class="loading"></span>
+                                    <span class="text-primary total-filter num-candidates"></span>
+                                    <span class="fixed-total-filter-text"></span>
                                 </label>
                             </div>
                         </div>
