--- a/app/templates/admin/users_monitor.html
+++ b/app/templates/admin/users_monitor.html
@@ -12,6 +12,32 @@
             <div class="sub header">
                 Monitoring users data.
             </div>
+            <div id="emotion_box" class="page-title-actions col-md-6 col-lg-3">
+                <div class="card-shadow-warning mb-3 widget-chart widget-chart2 text-left card" style="margin-top: 30px;">
+                                    <div class="widget-content">
+                                        <div class="widget-content-outer">
+                                            <div class="widget-content-wrapper">
+                                                <div class="widget-content-left pr-2 fsize-1">
+                                                    <div class="widget-numbers mt-0 fsize-3 {{ fgi_text_color }}">{{ market_emotion.fgi_value}}</div>
+                                                </div>
+                                                <div class="widget-content-right w-100">
+                                                    <div >
+                                                            <progress id="file" max="100" value="{{ market_emotion.fgi_value }}" style="width: 100%;"> 70% </progress>
+<!--                                                        <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 32%;"></div>-->
+                                                    </div>
+                                                </div>
+                                            </div>
+
+                                            <div class="widget-content-left fsize-12">
+                                                <div class="text-muted opacity-10 ">Market Emotion</div>
+                                            </div>
+                                            <div class="widget-content-left fsize-1">
+                                                <div class="text-muted opacity-2">{{ market_emotion.score_time }}</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+            </div>
             <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
@@ -40,7 +66,10 @@
   "locale": "en"
 }
   </script>
+
+
 </div>
+
 
         </h2>
 
