--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -347,7 +347,7 @@
                                     </label>
                                 </div>
                             </div>
-                                                        <div class="col-md-6 input-group d-block">
+                            <div class="col-md-6 input-group d-block">
                                 <div>
                                     <label for="algo_min_beta" class="">Minimal Emotion allowed</label>
                                 </div>
@@ -365,7 +365,7 @@
                                     <input title="Minimal Emotion allowed"
                                                value="{{user_settings.algo_min_emotion}}"
                                                name="algo_min_emotion" id="algo_min_emotion" type="text"
-                                               class="form-control strategy-change6">
+                                               class="form-control strategy-change">
                                 </div>
                             </div>
 
