--- a/app/templates/userview/closedpositions.html
+++ b/app/templates/userview/closedpositions.html
@@ -99,6 +99,10 @@
                             <div>{{count_positions}}</div>
                             <div class="label-info pt-2">All</div>
                         </div>
+                        <div class="item info-items" data-toggle="tooltip" data-placement="bottom" title="Positions closed for technical reason">
+                            <div class="text-warning">{{technical_positions}}</div>
+                            <div class="label-info pt-2 text-warning">Technical</div>
+                        </div>
                         <div class="item info-items">
                             <div class="text-success">{{succeed_positions}}</div>
                             <div class="label-info pt-2 text-success">Success</div>
