--- a/app/templates/admin/registered_users.html
+++ b/app/templates/admin/registered_users.html
@@ -45,6 +45,7 @@
                     <th class="sorted ascending">Last name</th>
                     <th>Email address</th>
                     <th>Account type</th>
+                    <th>Registration Date</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -55,6 +56,11 @@
                     <td>{{ u.last_name }}</td>
                     <td>{{ u.email }}</td>
                     <td class="user role">{{ u.role.name }}</td>
+                    <td>
+                        {% if u.registration_date is not none %}
+                        u.registration_date.strftime("%d %b, %Y")
+                        {%endif%}
+                    </td>
                 </tr>
                 {% endfor %}
                 </tbody>
@@ -64,30 +70,4 @@
 </div>
 
 
-{% endblock %}
-{% block scripting %}
-<script type="text/javascript">
-        $(document).ready(function () {
-            $('#search-users').keyup(function () {
-                var searchText = $(this).val();
-                if (searchText.length > 0) {
-                    $('tbody td:icontains(' + searchText + ')').addClass('positive');
-                    $('td.positive').not(':icontains(' + searchText + ')').removeClass('positive');
-                    $('tbody td').not(':icontains(' + searchText + ')').closest('tr').addClass('hidden').hide();
-                    $('tr.hidden:icontains(' + searchText + ')').removeClass('hidden').show();
-                } else {
-                    $('td.positive').removeClass('positive');
-                    $('tr.hidden').removeClass('hidden').show();
-                }
-            });
-
-            $('#select-role').dropdown({
-                onChange: function (value, text, $selectedItem) {
-                    $('td.user.role:contains(' + value + ')').closest('tr').removeClass('hidden').show();
-                    $('td.user.role').not(':contains(' + value + ')').closest('tr').addClass('hidden').hide();
-                }
-            });
-        });
-
-</script>
 {% endblock %}
