--- a/app/templates/admin/spider_statistic.html
+++ b/app/templates/admin/spider_statistic.html
@@ -21,6 +21,26 @@
                     <i class="search icon"></i>
                 </div>
             </div>
+            <div class="ui left item last-item spider-status-item">
+                <div class="widget-content">
+                    <div class="widget-content-outer">
+                        <div class="widget-content-wrapper">
+                            <div class="widget-content-left">
+                                <div class="widget-numbers fsize-1 text-muted spider-percent"></div>
+                            </div>
+                            <div class="widget-content-right">
+                                <div class="opacity-5 pl-4 spider-status"></div>
+                            </div>
+                        </div>
+                        <div class="widget-progress-wrapper mt-1">
+                            <div class="progress-bar-sm progress-bar-animated-alt progress">
+                                <div class="spider-progress-bar progress-bar bg-info" role="progressbar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         {# Use overflow-x: scroll so that mobile views don't freak out
