--- a/app/templates/admin/spider_statistic.html
+++ b/app/templates/admin/spider_statistic.html
@@ -26,15 +26,15 @@
                     <div class="widget-content-outer">
                         <div class="widget-content-wrapper">
                             <div class="widget-content-left">
-                                <div class="widget-numbers fsize-1 text-muted spider-percent"></div>
+                                <div class="widget-numbers fsize-1 text-muted spider-percent">100%</div>
                             </div>
                             <div class="widget-content-right">
-                                <div class="opacity-5 pl-4 spider-status"></div>
+                                <div class="opacity-5 pl-4 spider-status">spider finished</div>
                             </div>
                         </div>
                         <div class="widget-progress-wrapper mt-1">
                             <div class="progress-bar-sm progress-bar-animated-alt progress">
-                                <div class="spider-progress-bar progress-bar bg-info" role="progressbar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
+                                <div class="spider-progress-bar progress-bar bg-info" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
                             </div>
                         </div>
                     </div>
