--- a/app/templates/admin/users_monitor.html
+++ b/app/templates/admin/users_monitor.html
@@ -9,75 +9,66 @@
         </a>
         <h2 class="ui header">
             Users monitor
-            <div class="sub header">
+            <span class="sub header">
                 Monitoring users data.
-            </div>
-            <div id="emotion_box" class="page-title-actions col-md-6 col-lg-3">
-                <div class="card-shadow-warning mb-3 widget-chart widget-chart2 text-left card" style="margin-top: 30px;">
-                                    <div class="widget-content">
-                                        <div class="widget-content-outer">
-                                            <div class="widget-content-wrapper">
-                                                <div class="widget-content-left pr-2 fsize-1">
-                                                    <div class="widget-numbers mt-0 fsize-3 {{ fgi_text_color }}">{{ market_emotion.fgi_value}}</div>
-                                                </div>
-                                                <div class="widget-content-right w-100">
-                                                    <div >
-                                                            <progress id="file" max="100" value="{{ market_emotion.fgi_value }}" style="width: 100%;"> 70% </progress>
-<!--                                                        <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 32%;"></div>-->
-                                                    </div>
-                                                </div>
-                                            </div>
-
-                                            <div class="widget-content-left fsize-12">
-                                                <div class="text-muted opacity-10 ">Market Emotion</div>
-                                            </div>
-                                            <div class="widget-content-left fsize-1">
-                                                <div class="text-muted opacity-2">{{ market_emotion.score_time }}</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-            </div>
-            <div class="tradingview-widget-container">
-  <div class="tradingview-widget-container__widget"></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
-  {
-  "symbols": [
-    {
-      "proName": "FOREXCOM:SPXUSD",
-      "title": "S&P 500"
-    },
-    {
-      "proName": "FOREXCOM:NSXUSD",
-      "title": "Nasdaq 100"
-    },
-    {
-      "proName": "FX_IDC:EURUSD",
-      "title": "EUR/USD"
-    },
-    {
-      "proName": "BITSTAMP:BTCUSD",
-      "title": "BTC/USD"
-    }
-  ],
-  "colorTheme": "light",
-  "isTransparent": false,
-  "showSymbolLogo": false,
-  "locale": "en"
-}
-  </script>
-
-
-</div>
-
-
+            </span>
         </h2>
+
+        <div class="tradingview-widget-container">
+            <div class="tradingview-widget-container__widget"></div>
+            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-tickers.js" async>
+{
+"symbols": [
+{
+  "proName": "FOREXCOM:SPXUSD",
+  "title": "S&P 500"
+},
+{
+  "proName": "FOREXCOM:NSXUSD",
+  "title": "Nasdaq 100"
+},
+{
+  "proName": "FX_IDC:EURUSD",
+  "title": "EUR/USD"
+},
+{
+  "proName": "BITSTAMP:BTCUSD",
+  "title": "BTC/USD"
+}
+],
+"colorTheme": "light",
+"isTransparent": false,
+"showSymbolLogo": false,
+"locale": "en"
+}
+</script>
+        </div>
 
         <div class="ui menu">
             <div class="ui left search item">
                 <div class="ui transparent icon input">
                     <input id="search-users" type="text" placeholder="Search data…">
                     <i class="search icon"></i>
+                </div>
+            </div>
+            <div id="emotion_box" class="ui left last-item item">
+                <div class="widget-content-outer">
+                    <div class="widget-content-wrapper">
+                        <div class="widget-content-left pr-2 fsize-1">
+                            <div class="widget-numbers mt-0 fsize-2 text-{{fgi_text_color}}">
+                                {{ market_emotion.fgi_value}}
+                            </div>
+                        </div>
+                        <div class="widget-content-right w-100">
+                            <div class="progress-bar-sm progress-bar-animated-alt progress emotion-progress-bar">
+                                <div class="progress-bar bg-{{fgi_text_color}}" role="progressbar" aria-valuenow="{{ market_emotion.fgi_value }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ market_emotion.fgi_value }}%;"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="widget-content-left fsize-20 market-emotion">
+                        <div class="text-muted opacity-10 ">Market Emotion</div>
+                        <div class="text-muted opacity-2 emotion-update-time">{{ market_emotion.score_time }}</div>
+                    </div>
                 </div>
             </div>
         </div>
