--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -41,27 +41,23 @@
                   </script>
                 </div>
                 <!-- TradingView Widget END -->
-                <div id="emotion_box" class="page-title-actions col-md-6 col-lg-3">
-                    <div class="card-shadow-warning mb-3 widget-chart widget-chart2 text-left card" style="margin-top: 30px;">
-                        <div class="widget-content">
-                            <div class="widget-content-outer">
-                                <div class="widget-content-wrapper">
-                                    <div class="widget-content-left pr-2 fsize-1">
-                                        <div class="widget-numbers mt-0 fsize-3 {{ fgi_text_color }}">{{ market_emotion.fgi_value}}</div>
-                                    </div>
-                                    <div class="widget-content-right w-100">
-                                        <div>
-                                            <progress id="file" max="100" value="{{ market_emotion.fgi_value }}" style="width: 100%;"> 70% </progress>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="widget-content-left fsize-12">
-                                    <div class="text-muted opacity-10 ">Market Emotion</div>
-                                </div>
-                                <div class="widget-content-left fsize-1">
-                                    <div class="text-muted opacity-2">{{ market_emotion.score_time }}</div>
+                <div id="user_emotion_box" class="ui left last-item item page-title-actions">
+                    <div class="widget-content-outer">
+                        <div class="widget-content-wrapper">
+                            <div class="widget-content-left pr-2 fsize-1">
+                                <div class="widget-numbers mt-0 fsize-2 text-{{fgi_text_color}}">
+                                    {{ market_emotion.fgi_value}}
                                 </div>
                             </div>
+                            <div class="widget-content-right w-100">
+                                <div class="progress-bar-sm progress-bar-animated-alt progress emotion-progress-bar">
+                                    <div class="progress-bar bg-{{fgi_text_color}}" role="progressbar" aria-valuenow="{{ market_emotion.fgi_value }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ market_emotion.fgi_value }}%;"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="widget-content-left fsize-1 market-emotion">
+                            <div class="text-muted opacity-10 ">Market Emotion</div>
+                            <div class="text-muted opacity-2 emotion-update-time">{{ market_emotion.score_time }}</div>
                         </div>
                     </div>
                 </div>
