emotion market date format

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -57,7 +57,7 @@
                         </div>
                         <div class="widget-content-left fsize-1 market-emotion">
                             <div class="text-muted opacity-10 ">Market Emotion</div>
-                            <div class="text-muted opacity-2 emotion-update-time">{{ market_emotion.score_time }}</div>
+                            <div class="text-muted opacity-2 emotion-update-time">{{ market_emotion.score_time.strftime("%d %b, %Y %H:%M:%S") }}</div>
                         </div>
                     </div>
                 </div>
