closed position - utc in title

--- a/app/templates/userview/closedpositions.html
+++ b/app/templates/userview/closedpositions.html
@@ -137,8 +137,8 @@
                     <th>Ticker</th>
                     <th></th>
                     <th>Stocks</th>
-                    <th>Opened</th>
-                    <th>Closed</th>
+                    <th>Opened (utc)</th>
+                    <th>Closed (utc)</th>
                     <th>Open price</th>
                     <th>Close price</th>
                     <th>Days in work</th>
