fix bug: BlackSwanModal - not opening

--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -159,7 +159,7 @@
                                         With
                                         <span class="text-primary pr-2 pl-2 blackswan-min">{{user_settings.algo_positions_for_swan}}%</span>
                                         selected there were :
-                                        <span class="text-primary pr-1 pl-2 link font-weight-bold" onclick="show_modal_snp()"><span class="blackswan-events pr-1"></span> events in last 5 Years</span>
+                                        <span class="text-primary pr-1 pl-2 link font-weight-bold show_modal_snp"><span class="blackswan-events pr-1"></span> events in last 5 Years</span>
                                     </label>
                                 </div>
                             </div>
@@ -522,7 +522,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLongTitle">S&P in last 5 years</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close snp-modal-close" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
