--- a/app/static/styles/app_styles.css
+++ b/app/static/styles/app_styles.css
@@ -1,3 +1,20 @@
+.menu-td{
+    width: 15%;
+}
+
+.closed-sidebar.fixed-sidebar .app-main__outer {
+    padding-left: 30px !important;
+}
+
+.app-page-title {
+    margin: -30px 0px 30px !important;
+}
+
+.closed-sidebar .app-sidebar{
+    width: 50px !important;
+    min-width: 50px !important;
+}
+
 #net-report{
     width:100%;
     height:400px;
@@ -31,7 +48,25 @@
 
 .menu .filter-items{
     width: 17em;
+}
+
+.tbl-menu .filter-items, .menu .filter-items{
     padding: .92857143em 1.14285714em;
+}
+
+.tbl-menu .form-group{
+    margin-bottom: 0px !important;
+}
+
+.td-item{
+    display: flex;
+    align-items: center;
+}
+
+.tbl-menu .td-item{
+    position: relative;
+    line-height: 1;
+    padding: .2857143em 0.54285714em;
 }
 
 .spider-status-item, #emotion_box{
@@ -87,8 +122,24 @@
     display: inherit;
 }
 
-.ui.menu .last-item:before {
+.ui.menu .last-item:before,
+.tbl-menu .last-item:before{
     height: 0 !important;
+}
+
+.profit-value{
+    width: 132px;
+    margin-left: 20% !important;
+}
+
+.tbl-menu .td-item:before {
+    position: absolute;
+    content: '';
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 1px;
+    background: rgba(34,36,38,.1);
 }
 
 .ibkr-div{
@@ -123,6 +174,8 @@
         width: auto;
     }
 }
+
+
 
 
 
