market emotion fix bug css

--- a/app/templates/userview/traderstationstate.html
+++ b/app/templates/userview/traderstationstate.html
@@ -41,7 +41,7 @@
                   </script>
                 </div>
                 <!-- TradingView Widget END -->
-                <div id="user_emotion_box" class="ui left last-item item page-title-actions">
+                <div id="user_emotion_box" class="ui left last-item item">
                     <div class="widget-content-outer">
                         <div class="widget-content-wrapper">
                             <div class="widget-content-left pr-2 fsize-1">
