--- a/app/templates/userview/algotraderSettings.html
+++ b/app/templates/userview/algotraderSettings.html
@@ -365,10 +365,12 @@
                                     <input title="Minimal Emotion allowed"
                                                value="{{user_settings.algo_min_emotion}}"
                                                name="algo_min_emotion" id="algo_min_emotion" type="text"
-                                               class="form-control strategy-change">
+                                               class="form-control strategy-change col-md-6">
+                                    <label class="text-muted small filter-comment col-md-3">
+                                        <span class="text-primary link emotion-filter">view</span>
+                                    </label>
                                 </div>
                             </div>
-
                         </div>
                         <div class="form-row pt-4 d-flex justify-content-center">
                             <div>
@@ -378,7 +380,6 @@
                                     <span class="fixed-total-filter-text"></span>
                                 </label>
                             </div>
-
                         </div>
                     </div>
                     <button type="submit" class="mt-5 btn btn-primary">Save</button>
@@ -506,12 +507,11 @@
                     <button type="submit" class="mt-2 btn btn-primary">Save</button>
                 </div>
             </form>
-
         </div>
-
     </div>
 </div>
 {% endblock %}
+
 {% block scripting %}
 <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/settings.js') }}"></script>
 {% endblock %}
@@ -552,4 +552,24 @@
         </div>
     </div>
 </div>
+
+<!--<div class="modal emotion-settings-modal" tabindex="-1" role="dialog" aria-hidden="true" >-->
+<!--    <div class="modal-dialog modal-lg">-->
+<!--        <div class="modal-content">-->
+<!--            <div class="modal-header">-->
+<!--                <h5 class="modal-title" id="emotionModalTitle">S&P with Market Emotion</h5>-->
+<!--                <button type="button" class="emotion-modal-close close" aria-label="Close">-->
+<!--                    <span aria-hidden="true">&times;</span>-->
+<!--                </button>-->
+<!--            </div>-->
+<!--            <div class="modal-body">-->
+<!--                <div id="container_sp500" style="width:100%; height:300px;"></div>-->
+<!--                <div id="container_emotion" style="width:100%; height:300px;"></div>-->
+<!--            </div>-->
+<!--            <div class="modal-footer">-->
+<!--                <button type="button" onclick="go_to_cnn()" class="btn btn-secondary" >Description</button>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 {% endblock %}
